k3s/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-behavior-backend
  namespace: web-behavior
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-behavior-backend
  template:
    metadata:
      labels:
        app: web-behavior-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/dinerozz/web-behavior:master
          imagePullPolicy: Always
          ports:
            - containerPort: 5555
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 5555
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5555
            initialDelaySeconds: 5
            periodSeconds: 5
