k3s/backend-service.yaml
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-backend-service
  namespace: expense-tracker
spec:
  selector:
    app: expense-tracker-backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
