k3s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: web-behavior
spec:
  selector:
    app: redis
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 31091
